# OpenGLRayTracing

./: .gitignore  CMakeLists.txt  README.md  README.mdecho
include/: Calculate.hpp  Camera.hpp  Cone.hpp  Enums.hpp  Error.hpp  Factory.hpp  Light.hpp  Loop.hpp  Parse.hpp  Plane.hpp  RT.hpp  Shape.hpp  Sphere.hpp  Structs.hpp
src/: Calculate.cpp  Camera.cpp  Cone.cpp  Factory.cpp  Light.cpp  Loop.cpp  Parse.cpp  Plane.cpp  Sphere.cpp
